[Code] Testing CD

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
 #    paths: ['/workspace/MessageUtil/bin/Release/netcoreapp3.1/win10-x64/messageutil-win10-x64.tar.gz']
 - name: 'ubuntu'
   entrypoint: 'ls'
-  args: [ '-la' ]
+  args: [ '-la', '/workspace/MessageUtil/bin/Release/netcoreapp3.1/win10-x64/' ]
 #- name: 'mcr.microsoft.com/dotnet/core/sdk:3.1'
 #  entrypoint: 'ls'
 #  args: [ '/workspace/MessageUtil/bin/Release/netcoreapp3.1/' ]
