--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,10 +15,16 @@ steps:
 #    paths: ['/workspace/MessageUtil/bin/Release/netcoreapp3.1/win10-x64/messageutil-win10-x64.tar.gz']
 - name: 'ubuntu'
   entrypoint: 'apt-get'
-  args: [ 'install', 'expect' ]
+  args: [ 'update']
 - name: 'ubuntu'
-  entrypoint: 'expect'
-  args: [ './sftpexpect.expect' ]
+  entrypoint: 'apt-get'
+  args: [ '-y', 'upgrade']
+- name: 'ubuntu'
+  entrypoint: 'apt-get'
+  args: [ '-y', 'install', 'sshpass']
+- name: 'ubuntu'
+  entrypoint: 'bash'
+  args: [ './filetrans.sh']
 #- name: 'mcr.microsoft.com/dotnet/core/sdk:3.1'
 #  entrypoint: 'ls'
 #  args: [ '/workspace/MessageUtil/bin/Release/netcoreapp3.1/' ]
