--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,13 +9,13 @@ steps:
 - name: 'mcr.microsoft.com/dotnet/core/sdk:3.1'
   entrypoint: 'bash'
   args: [ './tarring.sh' ]
-#artifacts:
-#  objects:
-#    location: 'gs://net-demo-output-bucket/'
-#    paths: ['/workspace/MessageUtil/bin/Release/netcoreapp3.1/win10-x64/messageutil-win10-x64.tar.gz']
 - name: 'ubuntu'
   entrypoint: 'bash'
   args: [ './filetrans.sh']
+artifacts:
+  objects:
+    location: 'gs://net-demo-output-bucket/'
+    paths: ['/workspace/MessageUtil/bin/Release/netcoreapp3.1/win10-x64/messageutil-win10-x64.tar.gz']
 #- name: 'mcr.microsoft.com/dotnet/core/sdk:3.1'
 #  entrypoint: 'ls'
 #  args: [ '/workspace/MessageUtil/bin/Release/netcoreapp3.1/' ]
